# robot_description_package

./: CMakeLists.txt  LICENSE  README.md  package.xml
config/rviz/: standalone.rviz
launch/: load.launch  standalone_simplified.launch
srdf/: robot_simplified.srdf
urdf/: robot_simplified.urdf
